fix: align address component

--- a/src/micro-frontends/Onboard/components/FormSection/Address/index.module.scss
+++ b/src/micro-frontends/Onboard/components/FormSection/Address/index.module.scss
@@ -1,17 +1,9 @@
-.addressContainer {
+.addressRow {
+  width: 80%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 55vh;
-  overflow-y: auto;
+  justify-content: space-between;
 
-  .addressRow {
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
-
-    .halfInputWidth {
-      width: 45%;
-    }
+  .halfInputWidth {
+    width: 45%;
   }
 }
